--- a/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.html
@@ -82,7 +82,8 @@
           <div class="body">
             <div class="body__row">
               <mat-form-field>
-                <input type="text" matInput [disabled]="!editable" placeholder="Price" currencyInput [initPrice]="_scheduleBackup.price" (priceChanged)="_scheduleBackup.price = $event">
+                <input type="text" matInput [disabled]="!editable || !_scheduleBackup.product.dynamicPrice.enabled" placeholder="Price" currencyInput [initPrice]="_scheduleBackup.price" (priceChanged)="_scheduleBackup.price = $event">
+                <mat-hint align="end" *ngIf="_scheduleBackup.product.dynamicPrice.enabled">{{_scheduleBackup.product.dynamicPrice.min.usd()}} - {{_scheduleBackup.product.dynamicPrice.max.usd()}}</mat-hint>
               </mat-form-field>
             </div>
           </div>
