Fix unnamed affiliate issue on search pages

--- a/src/app/pages/search-page/perfect-match/perfect-affiliate-provider/perfect-affiliate.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-affiliate-provider/perfect-affiliate.component.html
@@ -8,7 +8,7 @@
 
         <div class="perfect-entity__info__fields__item">
           <span class="perfect-entity__info__fields__item__label">{{'SEARCH_PERFECT_AFFILIATE_NAME' | translate}}:</span>
-          <span class="perfect-entity__info__fields__item__value">{{affiliate.name}}</span>
+          <span class="perfect-entity__info__fields__item__value">{{affiliate.name || 'Unnamed Affiliate'}}</span>
         </div>
 
         <div class="perfect-entity__info__fields__item">
