Integrate subscriptions query

--- a/src/app/pages/transactions-page/transactions-index/transactions.component.html
+++ b/src/app/pages/transactions-page/transactions-index/transactions.component.html
@@ -1,6 +1,6 @@
 <div class="entity-index">
 
-  <blue-header [items]="crumbItems" [titleValue]="'TRANSACTION_INDEX_TITLE'"></blue-header>
+  <blue-header [items]="crumbItems" [titleValue]="'Transactions'"></blue-header>
 
   <filter-table [date]="date"
                 [columnParams]="columnParams"
