--- a/src/app/payment/plan-payment/plan-payment.component.html
+++ b/src/app/payment/plan-payment/plan-payment.component.html
@@ -11,7 +11,7 @@
   <div class="card">
 
     <div class="row">
-      <img *ngIf="creditCard.type !== 'OTHER'" src="{{'/assets/cards/' + (creditCard.getTypeShort() || 'other').toLowerCase() + '.svg'}}">
+      <img *ngIf="creditCard.getTypeShort() !== 'other'" src="{{'/assets/cards/' + (creditCard.getTypeShort() || '').toLowerCase() + '.svg'}}">
       <div class="edit" (click)="changeCreditCard.emit(true)">Edit Card</div>
     </div>
 
