--- a/src/app/navigation/topnav/topnav.component.scss
+++ b/src/app/navigation/topnav/topnav.component.scss
@@ -129,6 +129,9 @@ $main-color: #9B9A9B;
       padding: 2px 10px;
       background: $main-color-600;
       height: 40px;
+      width: 100%;
+      max-width: 425px;
+      box-sizing: border-box;
       border-radius: 3px;
       margin-right: 16px;
     }
@@ -136,13 +139,14 @@ $main-color: #9B9A9B;
     &__container {
       position: relative;
       margin-left: 12px;
+      width: 100%;
 
       autocomplete {
         position: absolute;
         top: 42px;
         left: -22px;
         z-index: 5;
-        width: 240px;
+        width: 400px;
         max-height: 230px;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
         overflow: auto;
