Default body is appended on template creation based on template type, remove delivery type option

--- a/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
@@ -22,7 +22,7 @@
         <mat-icon>keyboard_arrow_down</mat-icon>
       </div>
       <mat-menu #typeOptions="matMenu" x-position="before">
-        <button mat-menu-item *ngFor="let type of types" (click)="entity.type = type">{{mapper(type)}}</button>
+        <button mat-menu-item *ngFor="let type of types" (click)="setTemplateType(type)">{{mapper(type)}}</button>
       </mat-menu>
     </div>
 
