--- a/src/app/pages/components/shipment-details/shipment-details.component.scss
+++ b/src/app/pages/components/shipment-details/shipment-details.component.scss
@@ -3,7 +3,7 @@
   align-items: center;
 }
 
-mat-icon {
+.shipment-icon {
   margin-right: 15px;
   height: 32px;
   width: 32px;
@@ -18,29 +18,20 @@ mat-icon {
   color: #1EBEA5;
 }
 
-.shipment-details {
-  position: relative;
-  margin-left: 15px;
-  color: #2C98F0;
-  z-index: 1;
-
-  .link {
-    cursor: pointer;
-    font-size: 13px;
-  }
-
-  shipment-status {
-    position: absolute;
-    top: 0;
-    left: 0;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.25);
-  }
-}
-
-.date {
-  margin-left: 15px;
-}
-
 .status {
   text-transform: capitalize;
+}
+
+.tracking-info {
+  display: flex;
+  align-items: center;
+
+  mat-icon {
+    margin-left: 15px;
+    height: 18px;
+    width: 18px;
+    font-size: 18px;
+    cursor: pointer;
+    color: rgba(0,0,0,0.65);
+  }
 }
