--- a/src/app/pages/shipping-receipts-page/shipping-receipts-view/shipping-receipt-view.component.scss
+++ b/src/app/pages/shipping-receipts-page/shipping-receipts-view/shipping-receipt-view.component.scss
@@ -6,54 +6,12 @@
   height: 20px;
 }
 
+.entity-view__card {
+  width: 100%;
+  max-width: 400px;
+}
+
 .number-input {
   margin-right: 25px;
   width: 100%;
-}
-
-.done-icon {
-  display: flex;
-  color: white;
-  border-radius: 50%;
-  background: #4CBA38;
-  height: 45px;
-  width: 45px;
-
-  mat-icon {
-    margin: auto;
-  }
-}
-
-.line {
-  margin: 8px auto;
-  width: 2px;
-  min-height: 42px;
-  background: rgba(0,0,0,0.3);
-}
-
-.history-container {
-  padding: 20px;
-}
-
-.info-container {
-  margin: 12px 0 15px 15px;
-
-  .name {
-    margin-bottom: 5px;
-    font-size: 16px;
-    text-transform: capitalize;
-  }
-
-  .time {
-    font-size: 12px;
-    color: rgba(0,0,0,0.5);
-  }
-
-  .warning {
-    background: #F8F8F8;
-    margin-top: 6px;
-    padding: 10px;
-    font-size: 12px;
-    color: rgba(0,0,0,0.5);
-  }
 }
