--- a/src/app/reports/affiliate-report/affiliate-report.component.html
+++ b/src/app/reports/affiliate-report/affiliate-report.component.html
@@ -1,34 +1,15 @@
-<div class="report__title">{{'AFFILIATEREPORT_TITLE' | translate}}</div>
+<blue-header [items]="crumbItems" [titleValue]="'Affiliates Report'"></blue-header>
 
-<div class="filter-container">
-  <advanced-filter
-    [date]="dateMap"
-    [filterTerms]="filterTerms"
-    [refreshText]="'ADVANCEDFILTER_REFRESHREPORTTEXT'"
-    [shareUrl]="shareUrl"
-    [groupByEnabled]="true"
-    [hasMenu]="false"
-    (dateChanged)="dateChanged($event)"
-    (groupByChanged)="groupByChanged($event)"
-    (filterTermAdded)="addFilter($event)"
-    (filterTermRemoved)="removeFilter($event)"
-    (resetFilters)="reset()"
-    (applyFilters)="fetchFunction()"
-    (refreshFilters)="refresh()">
-  </advanced-filter>
-</div>
-
-<report-table
-  [title]="'AFFILIATEREPORT_TABLETITLE' | translate"
-  [data]="reportsToDisplay"
-  [columnParams]="columnParams"
-  [limit]="limit"
-  [page]="page"
-  [paginationString]="getPaginationString()"
-  [showFilter]="false"
-  (cellClicked)="clicked($event)"
-  (next)="fetchNext()"
-  (previous)="fetchPrevious()"
-  (updateLimit)="updateLimit($event)"
-  (download)="download($event)">
-</report-table>
+<filter-table [date]="date"
+              [columnParams]="columnParams"
+              [items]="entities"
+              [tabs]="tabs"
+              [loading]="loadingData"
+              [singleOptions]="options"
+              [ignoreFilters]="true"
+              (download)="download($event)"
+              (updatedColumns)="updateColumns($event)"
+              (onSort)="updateSort($event)"
+              (dateChanged)="changeDate($event)"
+              (loadMore)="loadMore()">
+</filter-table>
