Update currency display on dashboard

--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
@@ -6,8 +6,10 @@
           <div>Welcome back, {{name}}</div>
           <div class="total-revenue-text">{{'DASHBOARD_STATE_LOWDATA_TOTALREVENUE' | translate}}</div>
           <div class="total-revenue-amount">
-            <div>$</div>
-            <div *ngIf="revenue">{{revenue | numberlocale}}</div>
+            <ng-container *ngIf="revenue">
+              <div>$</div>
+              <div>{{revenue.parsedAmount()}}</div>
+            </ng-container>
           </div>
         </div>
 
