--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.scss
@@ -29,6 +29,7 @@
         font-weight: 400;
         font-size: 60px;
         line-height: 67px;
+        min-height: 67px;
 
         :first-child {
           font-size: 30px;
