--- a/src/app/pages/dashboard-page/states/full/dashboard-full.component.html
+++ b/src/app/pages/dashboard-page/states/full/dashboard-full.component.html
@@ -6,8 +6,10 @@
         <div>Welcome back, {{name}}</div>
         <div class="total-revenue-text">{{revenueMessage}}</div>
         <div class="total-revenue-amount">
-          <div>$</div>
-          <div>{{totalAmount.amount | numberlocale}}</div>
+          <ng-container *ngIf="totalAmount">
+            <div>$</div>
+            <div>{{totalAmount.parsedAmount()}}</div>
+          </ng-container>
         </div>
       </div>
 
