--- a/src/app/pages/dashboard-page/states/full/dashboard-full.component.scss
+++ b/src/app/pages/dashboard-page/states/full/dashboard-full.component.scss
@@ -31,6 +31,7 @@
       font-weight: 400;
       font-size: 60px;
       line-height: 67px;
+      min-height: 67px;
 
       :first-child {
         font-size: 30px;
