--- a/src/app/navigation/layouts/default/default.layout.component.html
+++ b/src/app/navigation/layouts/default/default.layout.component.html
@@ -1,8 +1,6 @@
 <div>
-  <persistent-notifications-quick></persistent-notifications-quick>
-</div>
+  <persistent-notifications-quick style="display: block"></persistent-notifications-quick>
 
-<div>
   <header>
     <app-topnav [isInvitedUser]="isInvitedUser" (invitedUserInstructionsDismissed)="isInvitedUser = false"></app-topnav>
   </header>
