Update card pickers on account general page

--- a/src/app/pages/account-management-page/account-management-general/account-management-general.component.html
+++ b/src/app/pages/account-management-page/account-management-general/account-management-general.component.html
@@ -156,7 +156,7 @@
 
             <div class="actions">
               <mat-icon (click)="deleteCard(card)">delete</mat-icon>
-              <mat-icon (click)="openCardModal(card)">edit</mat-icon>
+              <mat-icon (click)="openCardModal(card, false)">edit</mat-icon>
             </div>
           </div>
         </ng-container>
@@ -165,7 +165,7 @@
           <div class="no-card">No Cards found</div>
         </ng-template>
 
-        <button class="add-card-button" mat-button (click)="openCardModal()">ADD CARD</button>
+        <button class="add-card-button" mat-button (click)="openCardModal(null, true)">ADD CARD</button>
       </div>
       <div *ngIf="customer" class="card">
         <div class="title">Contact Information</div>
