Work on account billing table and unpaid bill

--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing-transactions-chart/account-management-billing-transactions-chart.component.scss
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing-transactions-chart/account-management-billing-transactions-chart.component.scss
@@ -32,6 +32,14 @@
       width: 100%;
       box-sizing:  border-box;
 
+      &--error {
+        background: #DC2547;
+
+        .minimum, .date, .amount {
+          color: #ffffff;
+        }
+      }
+
       .date {
         color: white;
         font-size: 20px;
