--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
@@ -38,7 +38,6 @@
         <th>Status</th>
         <th>Date</th>
         <th>Card</th>
-        <th>Card Brand</th>
         <th>Plan</th>
         <th>Plan Minimum</th>
         <th>Amount Billed</th>
@@ -46,22 +45,21 @@
     </thead>
 
     <tbody>
-      <tr *ngFor="let rebill of session.rebills">
-        <td class="status">
-          <mat-icon class="status-icon success-icon" *ngIf="isStatusSuccess(rebill); else erroricon">done</mat-icon>
-          <ng-template #erroricon>
-            <mat-icon class="status-icon erorr-icon">error_outline</mat-icon>
-          </ng-template>
-
-          <span>{{getStatus(rebill)}}</span>
-        </td>
-        <td>{{rebill.billAt | formatDateTime: 'MMMM Do, YYYY'}}</td>
-        <td>**** {{getCard(rebill).lastFour}}</td>
-        <td>{{getCard(rebill).type}}</td>
-        <td>{{rebill.productSchedules[0].name}}</td>
-        <td>{{getPlanPrice(rebill).usd()}}</td>
-        <td>{{rebill.amount.usd()}}</td>
-      </tr>
+      <ng-container *ngFor="let rebill of session.rebills">
+        <tr [class.unpaid-rebill]="!isPaid(rebill)">
+          <td class="status">
+            <mat-icon class="status-icon success-icon" *ngIf="isPaid(rebill); else erroricon">done</mat-icon>
+            <ng-template #erroricon>
+              <mat-icon class="status-icon error-icon">error_outline</mat-icon>
+            </ng-template>
+          </td>
+          <td>{{rebill.billAt | formatDateTime: 'MMMM Do, YYYY'}}</td>
+          <td>{{getCardNumber(rebill)}}</td>
+          <td>{{rebill.productSchedules[0].name}}</td>
+          <td>{{getPlanPrice(rebill).usd()}}</td>
+          <td>{{rebill.amount.usd()}}</td>
+        </tr>
+      </ng-container>
     </tbody>
   </table>
 </div>
