--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
@@ -39,8 +39,8 @@
         <th>Date</th>
         <th>Card</th>
         <th>Plan</th>
-        <th>Plan Minimum</th>
-        <th>Amount Billed</th>
+        <th class="number-cell">Plan Minimum</th>
+        <th class="number-cell">Amount Billed</th>
       </tr>
     </thead>
 
@@ -56,8 +56,13 @@
           <td>{{rebill.billAt | formatDateTime: 'MMMM Do, YYYY'}}</td>
           <td>{{getCardNumber(rebill)}}</td>
           <td>{{rebill.productSchedules[0].name}}</td>
-          <td>{{getPlanPrice(rebill).usd()}}</td>
-          <td>{{rebill.amount.usd()}}</td>
+          <td class="number-cell">{{getPlanPrice(rebill).usd()}}</td>
+          <td class="number-cell button-cell">
+            <ng-container *ngIf="isPaid(rebill); else paybutton">{{rebill.amount.usd()}}</ng-container>
+            <ng-template #paybutton>
+              <button class="paybutton" mat-button (click)="payRebill(rebill)">PAY {{rebill.amount.usd()}}</button>
+            </ng-template>
+          </td>
         </tr>
       </ng-container>
     </tbody>
