Enable adding of new card on account billing page

--- a/src/app/dialog-modals/card-switcher-dialog/card-switcher-dialog.component.html
+++ b/src/app/dialog-modals/card-switcher-dialog/card-switcher-dialog.component.html
@@ -22,12 +22,12 @@
           <td>****{{card.lastFour}}</td>
           <td>{{card.name}}</td>
           <td>{{card.expiration}}</td>
-          <td><span class="edit-link" (click)="editCard.next(card)">Edit</span></td>
+          <td *ngIf="updateEmbedded"><span class="edit-link" (click)="editCard.next(card)">Edit</span></td>
         </tr>
       </tbody>
     </table>
 
-    <button class="add-new-button" mat-button *ngIf="updateEmbedded" (click)="addCard.next(true)">Add New Card</button>
+    <button class="add-new-button" mat-button *ngIf="addEmbedded" (click)="addCard.next(true)">Add New Card</button>
 
   </div>
 
